--- a/day-1/first.html
+++ b/day-1/first.html
@@ -1,1 +1,100 @@
-<!-- All HTML code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>first class of html</title>
+</head>
+<body>
+    <!--this is headings-->
+    <h1 style="background-color:red;">This is the heading 1</h1> 
+    <h2> Heading 2 </h2>
+    <h3> Heading 3 </h3>
+    <h4> Heading 4 </h4>
+    <h5> Heading 5 </h5>
+    <h6> Heading 6 </h6>
+    <!--formating tags-->
+    <!--for bold-->
+    <b style="background-color:indianred;">this is used to provide bold ness</b>
+    <strong>this is used to provide same bold ness but we have to used for the important text only</strong>
+    <i>it is used for providing itallic</i>
+    <em>emphasize the text</em>
+    <mark>this is used to provide marking</mark>
+    K<sub>2</sub>
+    K<sup>2</sup>
+    <del>this is used to provide delete the text</del>
+    <u>this is used for provide underline to the text</u>
+    <abbr title="this is the error">this is used for abbreveation</abbr>
+    <!--extra tag-->
+    <br>
+    <hr>
+    <p>Lorem ipsum dolor sit            amet consectetur.</p>
+    <pre>this is used to provide             preformated content</pre>
+    <!--List-->
+    <!--types
+      1.order list
+      2.unorder list
+      3.description list
+      -->
+    <ol type="a">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+    </ol>
+    <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+    </ul>
+    <dl>
+        <dt>India</dt>
+        <dd>India is my counry</dd>
+        <dt>Home</dt>
+        <dd>Home color is red</dd>
+    </dl>
+    <!--Table-->
+    <table border="1">
+        <caption>this is a caption</caption>
+        <colgroup>
+            <col style="background-color:pink;">
+            <col span="2" style="background-color:red;">
+        </colgroup>
+        <thread>
+            <tr>
+                <th colspan="2">heading 1</th>
+                <th>heading 2</th>
+                <th>heading 3</th>
+            </tr>
+        </thread>
+        <tbody>
+            <tr>
+                <td rowspan="2">item 1</td>
+                <td>item 2</td>
+                <td>item 3</td>
+            </tr>
+            <tr>
+                <td>item 4</td>
+                <td>item 5</td>
+                <td>item 6</td>
+            </tr>
+            <tr>
+                <td>item 7</td>
+                <td>item 8</td>
+                <td>item 9</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>item 10</td>
+                <td>item 11</td>
+                <td>item 12</td>
+            </tr>
+        </tfoot>
+    </table>
+    <!--anchor tag-->
+    <a href="https://www.google.com" target="_blank">click here go to Google website</a>
+    
+</body>
+</html>
